<resources>
    <string name="app_name">Lab3_4Picker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date:</string>
    <string name="account_1_balance">Account 1 Balance</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="age">Age</string>
    <string name="eligible_amount">Eligible Amount</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
</resources>
